--- a/packages/vital-carousel/package.json
+++ b/packages/vital-carousel/package.json
@@ -33,7 +33,10 @@
     "react": "^18.2.0"
   },
   "dependencies": {
+    "@bodiless/components": "^1.0.0-rc.42",
+    "@bodiless/core": "^1.0.0-rc.42",
     "@bodiless/cli": "^1.0.0-rc.42",
+    "@bodiless/data": "^1.0.0-rc.42",
     "@bodiless/components": "^1.0.0-rc.42",
     "@bodiless/components-ui": "^1.0.0-rc.42",
     "@bodiless/fclasses": "^1.0.0-rc.42",
