--- a/packages/vital-demo/package.json
+++ b/packages/vital-demo/package.json
@@ -50,6 +50,7 @@
     "@bodiless/richtext-ui": "^1.0.0-rc.42",
     "@bodiless/vital-accordion": "^1.0.0-rc.42",
     "@bodiless/vital-buttons": "^1.0.0-rc.42",
+    "@bodiless/vital-carousel": "^1.0.0-rc.42",
     "@bodiless/vital-card": "^1.0.0-rc.42",
     "@bodiless/vital-content-listing": "^1.0.0-rc.42",
     "@bodiless/vital-editors": "^1.0.0-rc.42",
