--- a/packages/vital-carousel/package.json
+++ b/packages/vital-carousel/package.json
@@ -33,12 +33,11 @@
     "react": "^18.2.0"
   },
   "dependencies": {
-    "@bodiless/components": "^1.0.0-rc.42",
-    "@bodiless/core": "^1.0.0-rc.42",
     "@bodiless/cli": "^1.0.0-rc.42",
-    "@bodiless/data": "^1.0.0-rc.42",
     "@bodiless/components": "^1.0.0-rc.42",
     "@bodiless/components-ui": "^1.0.0-rc.42",
+    "@bodiless/core": "^1.0.0-rc.42",
+    "@bodiless/data": "^1.0.0-rc.42",
     "@bodiless/fclasses": "^1.0.0-rc.42",
     "@bodiless/hydration": "^1.0.0-rc.42",
     "@bodiless/layouts": "^1.0.0-rc.42",
@@ -47,6 +46,7 @@
     "@bodiless/table": "^1.0.0-rc.42",
     "@bodiless/vital-editors": "^1.0.0-rc.42",
     "@bodiless/vital-elements": "^1.0.0-rc.42",
+    "@bodiless/vital-image": "^1.0.0-rc.42",
     "lodash": "^4.17.19",
     "pure-react-carousel": "^1.27.6",
     "tailwindcss": "^3.0.23",
