--- a/packages/vital-carousel/package.json
+++ b/packages/vital-carousel/package.json
@@ -50,6 +50,10 @@
     "@bodiless/vital-image": "^1.0.0-rc.42",
     "lodash": "^4.17.19",
     "tailwindcss": "^3.0.23",
-    "tailwindcss-dir": "^4.0.0"
+    "tailwindcss-dir": "^4.0.0",
+    "react-helmet": "^6.1.0"
+  },
+  "devDependencies": {
+    "@types/react-helmet": "^6.1.0"
   }
 }
